cmake_minimum_required(VERSION 3.24)
project(EX3)

set(CMAKE_CXX_STANDARD 11)

add_executable(EX3 main.cpp Linkedlist.h Plain.h Plain.cpp Path.h Path.cpp Intersection.h ReadFile.h ReadFile.cpp Stack.h MyString.h Mystring.cpp "Plain_Horse.h" Navajo.h Apache.h Cherokee.h Plain_Horse.cpp Apache.cpp Cherokee.cpp Navajo.cpp Intersection.cpp)
